Add description imae

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -117,17 +117,17 @@
           <div class="slider-wrapper">
             <button id="prev-slide" class="slide-button material-symbols-rounded">chevron_left</button>
             <div class="album-list">
-              <video autoplay loop muted controls id="yt-video" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1717737833/2022_ok3azm.mp4" alt= "itm-1" class="album-item"></video>
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto1_qejxl4.webp" alt="itm-2" class="album-item" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987198/2022Foto2_acs5ty.webp" alt="itm-3" class="album-item" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987198/2022Foto3_lbtinu.webp" alt="itm-4" class="album-item" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto4_xihgxl.webp" alt="itm-5" class="album-item" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto5_sy6hqx.webp" alt="itm-6" class="album-item" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto6_bql56y.webp" alt="itm-7" class="album-item" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto7_wubqbz.webp" alt="itm-8" class="album-item" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto8_cdvzeq.webp" alt="itm-9" class="album-item" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto9_dlr0jc.webp" alt="itm-10" class="album-item" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987200/2022Foto10_d6l1qw.webp" alt="itm-11" class="album-item" loading="lazy">
+              <video autoplay loop muted controls id="yt-video" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1717737833/2022_ok3azm.mp4" alt= "Video Festival Karma Wairagya 2022" class="album-item"></video>
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto1_qejxl4.webp" alt="Foto Festival Karma Wairagya 2022" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987198/2022Foto2_acs5ty.webp" alt="Foto Festival Karma Wairagya 2022" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987198/2022Foto3_lbtinu.webp" alt="Foto Festival Karma Wairagya 2022" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto4_xihgxl.webp" alt="Foto Festival Karma Wairagya 2022" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto5_sy6hqx.webp" alt="Foto Festival Karma Wairagya 2022" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto6_bql56y.webp" alt="Foto Festival Karma Wairagya 2022" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto7_wubqbz.webp" alt="Foto Festival Karma Wairagya 2022" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto8_cdvzeq.webp" alt="Foto Festival Karma Wairagya 2022" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987199/2022Foto9_dlr0jc.webp" alt="Foto Festival Karma Wairagya 2022" class="album-item" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717987200/2022Foto10_d6l1qw.webp" alt="Foto Festival Karma Wairagya 2022" class="album-item" loading="lazy">
             </div>
             <button id="next-slide" class="slide-button material-symbols-rounded">chevron_right</button>
           </div>
@@ -141,17 +141,17 @@
           <div class="slider-wrapper2">
             <button id="prev-slide2" class="slide-button2 material-symbols-rounded">chevron_left</button>
             <div class="album-list2">
-              <video autoplay loop muted controls id="yt-video" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1717737833/2022_ok3azm.mp4" alt= "itm-1" class="album-item2"></video>
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto1_po5c4w.webp" alt="itm-2" class="album-item2" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto2_z5uf2h.webp" alt="itm-3" class="album-item2" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto3_jfzofx.webp" alt="itm-4" class="album-item2" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989901/2023Foto4_z0g80z.webp" alt="itm-5" class="album-item2" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989901/2023Foto5_ys5rrq.webp" alt="itm-6" class="album-item2" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto6_hrt9x2.webp" alt="itm-7" class="album-item2" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989901/2023Foto7_jkq3ur.webp" alt="itm-8" class="album-item2" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989900/2023Foto8_xagpjg.webp" alt="itm-9" class="album-item2" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989900/2023Foto9_l2e05v.webp" alt="itm-10" class="album-item2" loading="lazy">
-              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989909/2023Foto10_ljh2nh.webp" alt="itm-11" class="album-item2" loading="lazy">
+              <video autoplay loop muted controls id="yt-video" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1717737833/2022_ok3azm.mp4" alt= "Kilas Balik Festival Karma Wairagya 2023" class="album-item2"></video>
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto1_po5c4w.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto2_z5uf2h.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto3_jfzofx.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989901/2023Foto4_z0g80z.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989901/2023Foto5_ys5rrq.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto6_hrt9x2.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989901/2023Foto7_jkq3ur.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989900/2023Foto8_xagpjg.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989900/2023Foto9_l2e05v.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
+              <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989909/2023Foto10_ljh2nh.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
             </div>
             <button id="next-slide2" class="slide-button2 material-symbols-rounded">chevron_right</button>
           </div>
@@ -171,7 +171,7 @@
       <div id="contact" class="container">
         <div class="content">
           <div class="left">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" loading="lazy" id="footerlogo">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" loading="lazy" id="footerlogo" alt="Logo FKW">
           </div>
 
           <div class="right">
