Add link privacy policy and terms, add kilas balik 2023

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -141,7 +141,7 @@
           <div class="slider-wrapper2">
             <button id="prev-slide2" class="slide-button2 material-symbols-rounded">chevron_left</button>
             <div class="album-list2">
-              <video autoplay loop muted controls id="yt-video" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1717737833/2022_ok3azm.mp4" alt= "Kilas Balik Festival Karma Wairagya 2023" class="album-item2"></video>
+              <video autoplay loop muted controls id="yt-video" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1718114767/Kilas_Balik_FKW_2023_gihag5.mp4" alt= "Kilas Balik Festival Karma Wairagya 2023" class="album-item2"></video>
               <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto1_po5c4w.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
               <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto2_z5uf2h.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
               <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717989899/2023Foto3_jfzofx.webp" alt="Foto Festival Karma Wairagya 2023" class="album-item2" loading="lazy">
@@ -182,10 +182,10 @@
                   <a href="https://sman9denpasar.sch.id/" target="_blank">SMAN 9 Denpasar</a>
                 </li>
                 <li>
-                  <a href="#" target="_blank">Privacy Policy</a>
+                  <a href="https://www.privacypolicyonline.com/live.php?token=MxJkuS3JOytbM25uxq9Rsbn32a0EyS2j" target="_blank">Privacy Policy</a>
                 </li>
                 <li>
-                  <a href="#" target="_blank">Terms & Conditions</a>
+                  <a href="https://www.privacypolicyonline.com/live.php?token=Hxcrg3ad2AscGNbIcXgs0q8G6bKq2JKN" target="_blank">Terms & Conditions</a>
                 </li>
               </ul>
             </div>
@@ -197,6 +197,7 @@
                 <li>Desa Kertalangu, Kesiman,</li>
                 <li>Denpasar Timur, Bali, Indonesia. 80237</li>
                 <li>smansia9dps@gmail.com</li>
+                <li>admin@fkw9.my.id</li>
               </ul>
             </div>
           </div>
