Add Bazaar menu, fix some responsive

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -74,7 +74,7 @@
         </div>
       </section>
         <div class="right">
-          <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" alt="FKW Logo" loading="lazy"  id="headerlogo" />
+          <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719480246/FKWLogoA_t1s4lx.webp" alt="FKW Logo" loading="lazy"  id="headerlogo" />
         </div>
       </div>
     </header>
@@ -160,9 +160,158 @@
               <div class="scrollbar-thumb2"></div>
             </div>
           </div>
-
           <h4>2024 (Coming Soon)</h4>
+        </section>
+      </div>
 
+      <div id="bazaar">
+        <section id="menu-bazaar">
+          <div class="heading-bazaar">
+            <h2>MENU BAZAAR FKW 4</h2>
+          </div>
+          <div class="food-items">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Ayam_Goreng_whcagl.webp" alt="Paket Ayam Goreng">
+            <div class="details">
+              <div class="details-sub">
+                <h5>Paket Ayam Goreng</h5>
+              </div>
+              <p>Ayam Goreng + Nasi + Lalapan + Tempe + Sambal + Buah + Minum (Box)</p>
+              <div class="details-sub2">
+                <h4>Harga</h4>
+              </div>
+              <div class="details-sub3">
+                <h4 class="harga">Rp50K</h4>
+              </div>
+              </div>
+          </div>
+
+          <div class="food-items">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Bakar_pb8vky.webp" alt="Paket Ayam Panggang">
+            <div class="details">
+              <div class="details-sub">
+                <h5>Paket Ayam Panggang</h5>
+              </div>
+              <p>Ayam Panggang + Nasi + Lalapan + Tempe + Sambal + Buah + Minum (Box)</p>
+              <div class="details-sub2">
+                <h4>Harga</h4>
+              </div>
+              <div class="details-sub3">
+                <h4 class="harga">Rp50K</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="food-items">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494463/Dimsum_Mix_v7ymwt.webp" alt="Dimsum Mix">
+            <div class="details">
+              <div class="details-sub">
+                <h5>Dimsum Mix</h5>
+              </div>
+              <p>3 Jenis Dimsum + Saos (Box)</p>
+              <div class="details-sub2">
+                <h4>Harga</h4>
+              </div>
+              <div class="details-sub3">
+                <h4 class="harga">Rp50K</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="food-items">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Chicken_Steak_tfunvr.webp" alt="Chicken Steak">
+            <div class="details">
+              <div class="details-sub">
+                <h5>Chicken Steak</h5>
+              </div>
+              <p>Steak Ayam + Kentang + Sayur + Saos (Box)</p>
+              <div class="details-sub2">
+                <h4>Harga</h4>
+              </div>
+              <div class="details-sub3">
+                <h4 class="harga">Rp50K</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="food-items">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Rice_Bowl_Black_Pepper_dtsyqt.webp" alt="Paket Rice Bowl Black Pepper">
+            <div class="details">
+              <div class="details-sub">
+                <h5>Paket Rice Bowl Black Pepper</h5>
+              </div>
+              <p>Nasi + Ayam Black Pepper + Telur + Minuman Fruit Tea (Bowl)</p>
+              <div class="details-sub2">
+                <h4>Harga</h4>
+              </div>
+              <div class="details-sub3">
+                <h4 class="harga">Rp50K</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="food-items">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Rice_Bowl_Chili_Padi_rtjanm.webp" alt="Paket Rice Bowl Chili Padi">
+            <div class="details">
+              <div class="details-sub">
+                <h5 class=>Paket Rice Bowl Chili Padi</h5>
+              </div>
+              <p>Nasi + Ayam Chili Padi + Telur + Minuman Fruit Tea (Bowl)</p>
+              <div class="details-sub2">
+                <h4>Harga</h4>
+              </div>
+              <div class="details-sub3">
+                <h4 class="harga">Rp50K</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="food-items">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Betutu_Baru_npoiob.webp" alt="Paket Ayam Betutu">
+            <div class="details">
+              <div class="details-sub">
+                <h5>Paket Ayam Betutu</h5>
+              </div>
+              <p>Nasi + Ayam Betutu + Telur + Sate + Sayur + Buah + Aqua (Box)</p>
+              <div class="details-sub2">
+                <h4>Harga</h4>
+              </div>
+              <div class="details-sub3">
+                <h4 class="harga">Rp50K</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="food-items">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Mujair_Nyat-nyat_Baru_d2yahm.webp" alt="Mujair Nyat-Nyat">
+            <div class="details">
+              <div class="details-sub">
+                <h5>Mujair Nyat-Nyat</h5>
+              </div>
+              <p>Nasi + Mujair + Sayur + Minuman (Box)</p>
+              <div class="details-sub2">
+                <h4>Harga</h4>
+              </div>
+              <div class="details-sub3">
+                <h4 class="harga">Rp50K</h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="food-items">
+            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Goreng_Serundeng_Madura_dgltr5.webp" alt="Ayam Serundeng Madura">
+            <div class="details">
+              <div class="details-sub">
+                <h5>Ayam Goreng Serundeng Madura</h5>
+              </div>
+              <p>Nasi + Ayam + Tempe Tahu + Sambal + Minuman (Box)</p>
+              <div class="details-sub2">
+                <h4>Harga</h4>
+              </div>
+              <div class="details-sub3">
+                <h4 class="harga">Rp50K</h4>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
       </div>
