Better Navbar Mobile, -Image Protection

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="menu-icon">
-        <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/menu-icon_pinipn.svg" alt="" />
+        <img id="imgMenu" oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/menu-icon_pinipn.svg" alt="menu icon" />
       </div>
     </nav>
 
@@ -46,7 +46,7 @@
       <div class="container" id="beranda">
         <section>
         <div class="left">
-          <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" alt="Logo FKW" loading="lazy" id="logoheader"/>
+          <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" alt="Logo FKW" loading="lazy" id="logoheader"/>
           <h1>Festival Karma Wairagya</h1>
           <p>
             Festival Karma Wairagya merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar.
@@ -74,7 +74,7 @@
         </div>
       </section>
         <div class="right">
-          <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719480246/FKWLogoA_t1s4lx.webp" alt="FKW Logo" loading="lazy"  id="headerlogo" />
+          <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719480246/FKWLogoA_t1s4lx.webp" alt="FKW Logo" loading="lazy"  id="headerlogo" />
         </div>
       </div>
     </header>
@@ -83,18 +83,18 @@
       <section id="poto">
         <div class="content">
           <div class="pic">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737019/Foto1_klsiy7.webp" loading="lazy" id="potoh"/>
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto2_l6k1za.webp" loading="lazy" id="potoh"/>
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto3_tgac0l.webp" loading="lazy" id="potoh"/>
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto4_pypgdd.webp" loading="lazy" id="potoh"/>
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto5_jfkykt.webp" loading="lazy" id="potoh"/>
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737019/Foto1_klsiy7.webp" loading="lazy" id="potoh"/>
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/Foto2_l6k1za.webp" loading="lazy" id="potoh"/>
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto3_tgac0l.webp" loading="lazy" id="potoh"/>
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto4_pypgdd.webp" loading="lazy" id="potoh"/>
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/Foto5_jfkykt.webp" loading="lazy" id="potoh"/>
           </div>
         </div>
       </section>
       <section id="tentang-kami"></section>
-      <div class="hp"><img id="hp2"src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/FKWElemen_gvoz2q.webp" alt=""></div>
+      <div class="hp"><img oncontextmenu="return false" id="hp2"src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/FKWElemen_gvoz2q.webp" alt=""></div>
       <section id="tentang">
-        <div class="left"><img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/FKWElemen_gvoz2q.webp" loading="lazy"></div>
+        <div class="left"><img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/FKWElemen_gvoz2q.webp" loading="lazy"></div>
         <div class="right">
           <p>Festival Karma Wairagya (FKW) merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar. 
             Tujuan lain diadakannya festival ini yaitu untuk meningkatkan kemampuan siswa dan siswi untuk berkreativitas, melestarikan dan menonjolkan nilai
@@ -107,7 +107,7 @@
 
         <div id="trabaju">
           <div class="transisi"><video autoplay loop muted controls id="transisi" src="https://res.cloudinary.com/dcmo2r3d9/video/upload/v1717737830/transisi_ilso4z.mp4"></video></div>
-          <div class="baju"><img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/desainbaju_x32f2v.webp" id="baju" loading="lazy"></div>
+          <div class="baju"><img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/desainbaju_x32f2v.webp" id="baju" loading="lazy"></div>
         </div>
 
       <div id="galeri">
@@ -170,7 +170,7 @@
             <h2>MENU BAZAAR FKW 4</h2>
           </div>
           <div class="food-items">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Ayam_Goreng_whcagl.webp" alt="Paket Ayam Goreng">
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Ayam_Goreng_whcagl.webp" alt="Paket Ayam Goreng">
             <div class="details">
               <div class="details-sub">
                 <h5>Paket Ayam Goreng</h5>
@@ -186,7 +186,7 @@
           </div>
 
           <div class="food-items">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Bakar_pb8vky.webp" alt="Paket Ayam Panggang">
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Bakar_pb8vky.webp" alt="Paket Ayam Panggang">
             <div class="details">
               <div class="details-sub">
                 <h5>Paket Ayam Panggang</h5>
@@ -202,7 +202,7 @@
           </div>
 
           <div class="food-items">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494463/Dimsum_Mix_v7ymwt.webp" alt="Dimsum Mix">
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494463/Dimsum_Mix_v7ymwt.webp" alt="Dimsum Mix">
             <div class="details">
               <div class="details-sub">
                 <h5>Dimsum Mix</h5>
@@ -218,7 +218,7 @@
           </div>
 
           <div class="food-items">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Chicken_Steak_tfunvr.webp" alt="Chicken Steak">
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Chicken_Steak_tfunvr.webp" alt="Chicken Steak">
             <div class="details">
               <div class="details-sub">
                 <h5>Chicken Steak</h5>
@@ -234,7 +234,7 @@
           </div>
 
           <div class="food-items">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Rice_Bowl_Black_Pepper_dtsyqt.webp" alt="Paket Rice Bowl Black Pepper">
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Rice_Bowl_Black_Pepper_dtsyqt.webp" alt="Paket Rice Bowl Black Pepper">
             <div class="details">
               <div class="details-sub">
                 <h5>Paket Rice Bowl Black Pepper</h5>
@@ -250,7 +250,7 @@
           </div>
 
           <div class="food-items">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Rice_Bowl_Chili_Padi_rtjanm.webp" alt="Paket Rice Bowl Chili Padi">
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Rice_Bowl_Chili_Padi_rtjanm.webp" alt="Paket Rice Bowl Chili Padi">
             <div class="details">
               <div class="details-sub">
                 <h5 class=>Paket Rice Bowl Chili Padi</h5>
@@ -266,7 +266,7 @@
           </div>
 
           <div class="food-items">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Betutu_Baru_npoiob.webp" alt="Paket Ayam Betutu">
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Betutu_Baru_npoiob.webp" alt="Paket Ayam Betutu">
             <div class="details">
               <div class="details-sub">
                 <h5>Paket Ayam Betutu</h5>
@@ -282,7 +282,7 @@
           </div>
 
           <div class="food-items">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Mujair_Nyat-nyat_Baru_d2yahm.webp" alt="Mujair Nyat-Nyat">
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Mujair_Nyat-nyat_Baru_d2yahm.webp" alt="Mujair Nyat-Nyat">
             <div class="details">
               <div class="details-sub">
                 <h5>Mujair Nyat-Nyat</h5>
@@ -298,7 +298,7 @@
           </div>
 
           <div class="food-items">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Goreng_Serundeng_Madura_dgltr5.webp" alt="Ayam Serundeng Madura">
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Goreng_Serundeng_Madura_dgltr5.webp" alt="Ayam Serundeng Madura">
             <div class="details">
               <div class="details-sub">
                 <h5>Ayam Goreng Serundeng Madura</h5>
@@ -320,7 +320,7 @@
       <div id="contact" class="container">
         <div class="content">
           <div class="left">
-            <img src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" loading="lazy" id="footerlogo" alt="Logo FKW">
+            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737021/FKWLogo_gmqquv.webp" loading="lazy" id="footerlogo" alt="Logo FKW">
           </div>
 
           <div class="right">
