Revisi Bazaar, Fix Responsive

--- a/FKW/index.html
+++ b/FKW/index.html
@@ -92,9 +92,9 @@
         </div>
       </section>
       <section id="tentang-kami"></section>
-      <div class="hp"><img oncontextmenu="return false" id="hp2"src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/FKWElemen_gvoz2q.webp" alt=""></div>
+      <div class="hp"><img oncontextmenu="return false" id="hp2"src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1720340842/FKWElemen_u4ioa2.webp" alt=""></div>
       <section id="tentang">
-        <div class="left"><img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1717737020/FKWElemen_gvoz2q.webp" loading="lazy"></div>
+        <div class="left"><img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1720340842/FKWElemen_u4ioa2.webp" loading="lazy"></div>
         <div class="right">
           <p>Festival Karma Wairagya (FKW) merupakan sebuah festival yang diadakan setiap tahun untuk memeriahkan hari ulang tahun SMA Negeri 9 Denpasar. 
             Tujuan lain diadakannya festival ini yaitu untuk meningkatkan kemampuan siswa dan siswi untuk berkreativitas, melestarikan dan menonjolkan nilai
@@ -169,11 +169,17 @@
           <div class="heading-bazaar">
             <h2>MENU BAZAAR FKW 4</h2>
           </div>
-          <div class="food-items">
+
+          <div class="groupbazaar">
+            <h2>22 Juli</h2>
+            <div class="food-items">
             <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Ayam_Goreng_whcagl.webp" alt="Paket Ayam Goreng">
             <div class="details">
               <div class="details-sub">
-                <h5>Paket Ayam Goreng</h5>
+                <h5>Paket 1</h5>
+                <h5>(Paket Ayam Goreng Aqua)</h5>
+                <div class="details-sub4">
+                </div>
               </div>
               <p>Ayam Goreng + Nasi + Lalapan + Tempe + Sambal + Buah + Minum (Box)</p>
               <div class="details-sub2">
@@ -189,7 +195,8 @@
             <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Bakar_pb8vky.webp" alt="Paket Ayam Panggang">
             <div class="details">
               <div class="details-sub">
-                <h5>Paket Ayam Panggang</h5>
+                <h5>Paket 2</h5>
+                <h5>(Paket Ayam Panggang Aqua)</h5>
               </div>
               <p>Ayam Panggang + Nasi + Lalapan + Tempe + Sambal + Buah + Minum (Box)</p>
               <div class="details-sub2">
@@ -205,7 +212,8 @@
             <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494463/Dimsum_Mix_v7ymwt.webp" alt="Dimsum Mix">
             <div class="details">
               <div class="details-sub">
-                <h5>Dimsum Mix</h5>
+                <h5>Paket 3</h5>
+                <h5>(Dimsum Mix)</h5>
               </div>
               <p>3 Jenis Dimsum + Saos (Box)</p>
               <div class="details-sub2">
@@ -216,105 +224,120 @@
               </div>
             </div>
           </div>
-
-          <div class="food-items">
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Chicken_Steak_tfunvr.webp" alt="Chicken Steak">
-            <div class="details">
-              <div class="details-sub">
-                <h5>Chicken Steak</h5>
-              </div>
-              <p>Steak Ayam + Kentang + Sayur + Saos (Box)</p>
-              <div class="details-sub2">
-                <h4>Harga</h4>
-              </div>
-              <div class="details-sub3">
-                <h4 class="harga">Rp50K</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="food-items">
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Rice_Bowl_Black_Pepper_dtsyqt.webp" alt="Paket Rice Bowl Black Pepper">
-            <div class="details">
-              <div class="details-sub">
-                <h5>Paket Rice Bowl Black Pepper</h5>
-              </div>
-              <p>Nasi + Ayam Black Pepper + Telur + Minuman Fruit Tea (Bowl)</p>
-              <div class="details-sub2">
-                <h4>Harga</h4>
-              </div>
-              <div class="details-sub3">
-                <h4 class="harga">Rp50K</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="food-items">
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Rice_Bowl_Chili_Padi_rtjanm.webp" alt="Paket Rice Bowl Chili Padi">
-            <div class="details">
-              <div class="details-sub">
-                <h5 class=>Paket Rice Bowl Chili Padi</h5>
-              </div>
-              <p>Nasi + Ayam Chili Padi + Telur + Minuman Fruit Tea (Bowl)</p>
-              <div class="details-sub2">
-                <h4>Harga</h4>
-              </div>
-              <div class="details-sub3">
-                <h4 class="harga">Rp50K</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="food-items">
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Betutu_Baru_npoiob.webp" alt="Paket Ayam Betutu">
-            <div class="details">
-              <div class="details-sub">
-                <h5>Paket Ayam Betutu</h5>
-              </div>
-              <p>Nasi + Ayam Betutu + Telur + Sate + Sayur + Buah + Aqua (Box)</p>
-              <div class="details-sub2">
-                <h4>Harga</h4>
-              </div>
-              <div class="details-sub3">
-                <h4 class="harga">Rp50K</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="food-items">
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Mujair_Nyat-nyat_Baru_d2yahm.webp" alt="Mujair Nyat-Nyat">
-            <div class="details">
-              <div class="details-sub">
-                <h5>Mujair Nyat-Nyat</h5>
-              </div>
-              <p>Nasi + Mujair + Sayur + Minuman (Box)</p>
-              <div class="details-sub2">
-                <h4>Harga</h4>
-              </div>
-              <div class="details-sub3">
-                <h4 class="harga">Rp50K</h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="food-items">
-            <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Goreng_Serundeng_Madura_dgltr5.webp" alt="Ayam Serundeng Madura">
-            <div class="details">
-              <div class="details-sub">
-                <h5>Ayam Goreng Serundeng Madura</h5>
-              </div>
-              <p>Nasi + Ayam + Tempe Tahu + Sambal + Minuman (Box)</p>
-              <div class="details-sub2">
-                <h4>Harga</h4>
-              </div>
-              <div class="details-sub3">
-                <h4 class="harga">Rp50K</h4>
-              </div>
-            </div>
-          </div>
-        </section>
+</div>
+          
+<div class="groupbazaar">
+  <h2>23 Juli</h2>
+  <div class="food-items">
+    <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Chicken_Steak_tfunvr.webp" alt="Chicken Steak">
+    <div class="details">
+      <div class="details-sub">
+        <h5>Paket 4</h5>
+        <h5>(Chicken Steak)</h5>
       </div>
+      <p>Steak Ayam + Kentang + Sayur + Saos (Box)</p>
+      <div class="details-sub2">
+        <h4>Harga</h4>
       </div>
+      <div class="details-sub3">
+        <h4 class="harga">Rp50K</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="food-items">
+    <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Rice_Bowl_Black_Pepper_dtsyqt.webp" alt="Paket Rice Bowl Black Pepper">
+    <div class="details">
+      <div class="details-sub">
+        <h5>Paket 5</h5>
+        <h5>(Paket Rice Bowl Black Pepper Fruit Tea)</h5>
+      </div>
+      <p>Nasi + Ayam Black Pepper + Telur + Minuman Fruit Tea (Bowl)</p>
+      <div class="details-sub2">
+        <h4>Harga</h4>
+      </div>
+      <div class="details-sub3">
+        <h4 class="harga">Rp50K</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="food-items">
+    <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Rice_Bowl_Chili_Padi_rtjanm.webp" alt="Paket Rice Bowl Chili Padi">
+    <div class="details">
+      <div class="details-sub">
+        <h5 class=>Paket 6</h5>
+        <h5>(Paket Rice Bowl Chili Padi Fruit Tea)</h5>
+      </div>
+      <p>Nasi + Ayam Chili Padi + Telur + Minuman Fruit Tea (Bowl)</p>
+      <div class="details-sub2">
+        <h4>Harga</h4>
+      </div>
+      <div class="details-sub3">
+        <h4 class="harga">Rp50K</h4>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div class="groupbazaar">
+  <h2>24 Juli</h2>
+  <div class="food-items">
+    <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Betutu_Baru_npoiob.webp" alt="Paket Ayam Betutu">
+    <div class="details">
+      <div class="details-sub">
+        <h5>Paket 7</h5>
+        <h5>(Paket Ayam Betutu Aqua)</h5>
+      </div>
+      <p>Nasi + Ayam Betutu + Telur + Sate + Sayur + Buah + Aqua (Box)</p>
+      <div class="details-sub2">
+        <h4>Harga</h4>
+      </div>
+      <div class="details-sub3">
+        <h4 class="harga">Rp50K</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="food-items">
+    <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494456/Mujair_Nyat-nyat_Baru_d2yahm.webp" alt="Mujair Nyat-Nyat">
+    <div class="details">
+      <div class="details-sub">
+        <h5>Paket 8</h5>
+        <h5>(Mujair Nyat-Nyat Minuman)</h5>
+      </div>
+      <p>Nasi + Mujair + Sayur + Minuman (Box)</p>
+      <div class="details-sub2">
+        <h4>Harga</h4>
+      </div>
+      <div class="details-sub3">
+        <h4 class="harga">Rp50K</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="food-items">
+    <img oncontextmenu="return false" src="https://res.cloudinary.com/dcmo2r3d9/image/upload/v1719494455/Ayam_Goreng_Serundeng_Madura_dgltr5.webp" alt="Ayam Serundeng Madura">
+    <div class="details">
+      <div class="details-sub">
+        <h5>Paket 9</h5>
+        <h5>(Ayam Goreng Serundeng Madura Minuman)</h5>
+      </div>
+      <p>Nasi + Ayam + Tempe Tahu + Sambal + Minuman (Box)</p>
+      <div class="details-sub2">
+        <h4>Harga</h4>
+      </div>
+      <div class="details-sub3">
+        <h4 class="harga">Rp50K</h4>
+      </div>
+    </div>
+  </div>
+</section>
+</div>
+</div>
+
+</div>
 
     <footer>
       <div id="contact" class="container">
